Search button selected bottom line alignment fixed and better formatting of debug info

--- a/web/src/main/resources/web/css/header.css
+++ b/web/src/main/resources/web/css/header.css
@@ -120,7 +120,7 @@ body {
 	padding-top: 0;
 	padding-bottom: 0;
 	padding-right: 40px;
-	padding-left: 0.5rem;
+	padding-left: 1rem;
 	background-color: transparent;
 	color: transparent;
 	box-shadow: inset 0 -5px 0 transparent;
@@ -146,9 +146,19 @@ body {
 	background-position: center;
 	filter: invert(75%) sepia(2%) saturate(380%) hue-rotate(71deg) brightness(88%) contrast(91%);
 	transition: all 0.1s ease-in-out;
+	border-radius: 0;
 }
 
-.btn-search-selected:before {
+.btn-search:focus {
+	box-shadow: none;
+}
+
+.btn-search-selected {
+	box-shadow: inset 0 -5px 0 #ff4172; /* var(--highlight-colour) inverted TODO still conflicts with input box-shadow*/
+}
+
+/* Issues with position */
+/*.btn-search-selected:before {
 	display: block;
 	position: relative;
 	top: 1.5rem;
@@ -157,11 +167,11 @@ body {
 	background-color: black;
 	filter: invert(56%) sepia(91%) saturate(782%) hue-rotate(117deg) brightness(85%) contrast(101%) invert(100%);
 	content:"";
-}
+}*/
 
 .btn-search-form-selected {
 	background-color: var(--navbar-background-colour-selected);
-	padding-right: 0.5rem;
+	*padding-right: 0.5rem;
 }
 
 .btn-search:hover, .btn-search-selected {
